cloudformation/Infrastructure/security-groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Creates Necessary Security Groups.

Parameters:
  VPC:
    Description: The VPC on which resources should be deployed.
    Type: AWS::EC2::VPC::Id

  Application:
    Description: Application Name for which security groups are being created
    Type: String
    Default: lottery-project

  Environment:
    Description: Which environment the VPC is created for.
    Type: String
    Default: dev
    ConstraintDescription: Environment can be [dev, qa, prod]
    AllowedValues:
      - dev
      - qa
      - prod

Resources:
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Loadbalancer security group for ingress rule from internet.
      VpcId: !Ref VPC
      SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0
      Tags:
        - Key: Application
          Value: !Ref Application
        - Key: Environment
          Value: !Ref Environment

  ContainerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the ECS hosts that run containers
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Application
          Value: !Ref Application
        - Key: Environment
          Value: !Ref Environment

Outputs:
  ContainerSecurityGroup:
    Description: Security Group for the ECS Container
    Value: !Ref ContainerSecurityGroup
    Export:
      Name: !Sub ${Environment}:${Application}:ContainerSecurityGroup
  LoadBalancerSecurityGroup:
    Description: Security Group for the LoadBalancer.
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: !Sub ${Environment}:${Application}:LoadBalancerSecurityGroup
